apps/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: immich
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - immich
  rules:
    - host: immich
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server # Service name generated by the Helm chart
                port:
                  number: 2283 # Default Immich web port
